fixed footer enabled context upload

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="./index.css">
     <title>Boxy</title>
   </head>
   <body>
@@ -13,5 +14,23 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <footer class="app-footer">
+      <div class="logo">Boxy</div>
+      <div class="social">
+        <i>
+          <a href="https://twitter.com/prabhumurthy2" target="_new">
+            <img src="./img/twitter.svg" alt="twitter">
+          </a>
+        </i>
+        <i>
+          <a href="https://github.com/prabhuignoto" target="_new">
+            <img src="./img/github.svg" alt="github">
+          </a>
+        </i>
+      </div>
+      <div class="footer-info">
+        <span>2018 &copy; prabhumurthy.com. All rights reserved.</span>
+      </div>
+    </footer> 
   </body>
 </html>
