ux revamp part one

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="./index.css">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="stylesheet" href="./index.css" />
     <title>Boxy</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but client doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
@@ -19,18 +22,18 @@
       <div class="social">
         <i>
           <a href="https://twitter.com/prabhumurthy2" target="_new">
-            <img src="./img/twitter.svg" alt="twitter">
+            <img src="./img/twitter.svg" alt="twitter" />
           </a>
         </i>
         <i>
           <a href="https://github.com/prabhuignoto/boxy" target="_new">
-            <img src="./img/github.svg" alt="github">
+            <img src="./img/github.svg" alt="github" />
           </a>
         </i>
       </div>
       <div class="footer-info">
-        <span>2018 &copy; prabhumurthy.com. All rights reserved.</span>
+        <span>2020 &copy; prabhumurthy.com. All rights reserved.</span>
       </div>
-    </footer> 
+    </footer>
   </body>
 </html>
